--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
 </nav>
 
   <section>
-    <p>Email: info@mycollege.com | Phone: +91 98765 43210</p>
-    <p>Address: 123 College Road, City, State</p>
+    <p>Email: bmsgfgchuliyar@gmail.com | Phone: +91 8884883765 </p>
+    <p>Address: Hiriyuru Road, Chikkanayakanahalli taluk, State Karnataka </p>
   </section>
   <footer>
     <p>&copy; 2025 My College. All Rights Reserved.</p>
