--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My College</h1>
+    <h1>Welcome to B M S Government First Grade College-Huliyar</h1>
     <p>Excellence in Education & Beyond</p>
   </header>
   
