--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
     <h2>Empowering Students for a Bright Future</h2>
     <p>Your success starts here. Learn, grow, and achieve.</p>
   </section>
+<section id="principal-message">
+  <h2>Principal’s Message</h2>
+  <img src="images/principal.jpg" alt="Principal" width="200" style="border-radius:10px;">
+  <p>
+    It gives me immense pleasure to welcome you all to our college website.
+    Our institution is committed to academic excellence, holistic development, 
+    and creating responsible citizens for tomorrow. I invite you to explore the 
+    opportunities we provide and be part of our journey towards knowledge and growth.
+  </p>
+  <p><strong>– Prof Veeranna S C, Principal</strong></p>
+</section>
   <footer>
     <p>&copy; 2025 My College. All Rights Reserved.</p>
   </footer>
