--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
   </section>
 <section id="principal-message">
   <h2>Principal’s Message</h2>
-  <img src="images/principal.jpg" alt="Principal" width="200" style="border-radius:10px;">
+  <img src="images/principal.jpg" alt=width="453" style="border-radius:400px;">
   <p>
     It gives me immense pleasure to welcome you all to our college website.
     Our institution is committed to academic excellence, holistic development, 
     and creating responsible citizens for tomorrow. I invite you to explore the 
     opportunities we provide and be part of our journey towards knowledge and growth.
   </p>
-  <p><strong>– Prof Veeranna S C, Principal</strong></p>
+  <p><strong>– Prof Veeranna S C, </strong></p>
 </section>
   <footer>
     <p>&copy; 2025 My College. All Rights Reserved.</p>
