--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
     <p>Your success starts here. Learn, grow, and achieve.</p>
   </section>
 <section id="principal-message">
-  <h2>Principal’s Message</h2>
-  <img src="images/principal.jpg" alt=width="453" style="border-radius:400px;">
-  <p>
+  <h2>Principal’s Message</h2
     It gives me immense pleasure to welcome you all to our college website.
     Our institution is committed to academic excellence, holistic development, 
     and creating responsible citizens for tomorrow. I invite you to explore the 
