--- a/index.html
+++ b/index.html
@@ -27,16 +27,83 @@
     <h2>Empowering Students for a Bright Future</h2>
     <p>Your success starts here. Learn, grow, and achieve.</p>
   </section>
-<section id="principal-message">
-  <h2>Principal’s Message</h2>
-    It gives me immense pleasure to welcome you all to our college website.
-    Our institution is committed to academic excellence, holistic development, 
-    and creating responsible citizens for tomorrow. I invite you to explore the 
-    opportunities we provide and be part of our journey towards knowledge and growth.
-  </p>
-  <p><strong>– Prof Veeranna S C, </strong></p>
-</section>
-  <footer>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My College - Home</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    /* Principal's Message Styling */
+    #principal-message {
+      background: #f9f9f9;
+      padding: 20px;
+      margin: 30px auto;
+      max-width: 800px;
+      border-left: 6px solid #2c3e50;
+      border-radius: 10px;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.1);
+    }
+    #principal-message h2 {
+      color: #2c3e50;
+      margin-bottom: 15px;
+    }
+    #principal-message p {
+      font-size: 16px;
+      line-height: 1.6;
+      color: #333;
+    }
+    #principal-message .signature {
+      margin-top: 15px;
+      font-weight: bold;
+      font-style: italic;
+      text-align: right;
+    }
+    #principal-message img {
+      width: 120px;
+      height: 120px;
+      float: left;
+      margin-right: 15px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Welcome to B M S Government First Grade College - Huliyar</h1>
+    <p>Excellence in Education & Beyond</p>
+  </header>
+  
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="courses.html">Courses</a>
+    <a href="faculty.html">Faculty</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="login.html">Student Login</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
+  <section class="hero">
+    <h2>Empowering Students for a Bright Future</h2>
+    <p>Your success starts here. Learn, grow, and achieve.</p>
+  </section>
+
+  <!-- Principal's Message Section -->
+  <section id="principal-message">
+    <img src="images/principal.jpg" alt="Principal Photo">
+    <h2>Principal’s Message</h2>
+    <p>
+      It gives me immense pleasure to welcome you all to our college website.
+      Our institution is committed to academic excellence, holistic development, 
+      and creating responsible citizens for tomorrow. I invite you to explore the 
+      opportunities we provide and be part of our journey towards knowledge and growth.
+    </p>
+    <p class="signature">– Prof. Veeranna S C, Principal</p>
+  
     <p>&copy; 2025 My College. All Rights Reserved.</p>
   </footer>
 </body>
