--- a/faculty.html
+++ b/faculty.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,25 +5,71 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Faculty - My College</title>
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Faculty Section Styling */
+    #faculty {
+      text-align: center;
+      padding: 40px;
+      background: #f8f8f8;
+    }
+
+    #faculty h2 {
+      margin-bottom: 30px;
+      color: #2c3e50;
+    }
+
+    .faculty-card {
+      display: inline-block;
+      width: 220px;
+      padding: 20px;
+      margin: 15px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.1);
+    }
+
+    .faculty-card img {
+      width: 120px;
+      height: 120px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin-bottom: 15px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+  </style>
 </head>
 <body>
   <header>
     <h1>Our Faculty</h1>
   </header>
   
-<nav>
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="courses.html">Courses</a>
-  <a href="faculty.html">Faculty</a>
-  <a href="gallery.html">Gallery</a>
-  <a href="login.html">Student Login</a>
-  <a href="contact.html">Contact</a>
-</nav>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="courses.html">Courses</a>
+    <a href="faculty.html">Faculty</a>
+    <a href="gallery.html">Gallery</a>
+    <a href="login.html">Student Login</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 
   <section>
     <p>We have experienced and highly qualified faculty members guiding our students.</p>
   </section>
+
+  <!-- Faculty Section -->
+  <section id="faculty">
+    <h2>Faculty Profiles</h2>
+    
+    <div class="faculty-card">
+      <img src="images/ramesh.jpg" alt="Ramesh S">
+      <h3>Ramesh S</h3>
+      <p><strong>Assistant Professor</strong></p>
+      <p>Department of Commerce</p>
+    </div>
+
+  </section>
+
   <footer>
     <p>&copy; 2025 My College. All Rights Reserved.</p>
   </footer>
