--- a/faculty.html
+++ b/faculty.html
@@ -89,6 +89,12 @@
         <p><strong>Head of Department</strong></p>
         <p>Department of English</p>
       </div>
+      <div class="faculty-card">
+        <img src="images/Yoish B.jpg" alt="Dr. Yoish B">
+        <h3>Dr. Yoish B </h3
+        <p>Physical Education Department </p>
+      </div>
+      
 
     </div>
   </section>
